<?xml version="1.0"?>
<package format="2">
  <name>cv_calibration</name>
  <version>1.0.0</version>
  <description>Allows calibration of the 3d camera to color camera</description>
  <maintainer email="idecarufel@kinova.ca">Iliana De Carufel</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>roscpp</build_depend> -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>kortex_driver</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <!-- <build_depend>OpenCV</build_depend> -->
  <!-- <build_depend>kinova_vision</build_depend> -->

  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <!-- <exec_depend>video_stream_opencv</exec_depend> -->
  <!-- <exec_depend>roscpp</exec_depend> -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
